# ferrum-proxy

./: .gitignore  Cargo.toml  README.md  config.yaml
docs/: architecture.md  benchmarking.md  production-readiness.md
scripts/: test_backend.py
src/: config.rs  lib.rs  main.rs  server.rs
src/balancing/: mod.rs
src/config/: mod.rs
src/health/: mod.rs
src/http/: mod.rs
src/routing/: mod.rs
src/server/: mod.rs
src/telemetry/: mod.rs
src/upstream/: mod.rs
tests/: integration_test.rs  load_balancer_test.rs  router_test.rs
